tests/baselines/reference/invalidTripleSlashReference.errors.txt
==== tests/cases/compiler/invalidTripleSlashReference.ts (2 errors) ====
    /// <reference path='filedoesnotexist.ts'/>
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! invalidTripleSlashReference.ts(1,1): error TS5007: Cannot resolve referenced file: 'filedoesnotexist.ts'.
    /// <reference path='otherdoesnotexist.d.ts'/>
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! invalidTripleSlashReference.ts(2,1): error TS5007: Cannot resolve referenced file: 'otherdoesnotexist.d.ts'.
    
    // this test doesn't actually give the errors you want due to the way the compiler reports errors
    var x = 1;